--- a/index.html
+++ b/index.html
@@ -15,10 +15,36 @@
 </head>
 <body>
 
-    <button class="mdc-button" onclick="rerender()">
+    <button class="mdc-button mdc-button--outlined" id="superCoolButton" onclick="addSongsToList()">
         <span class="mdc-button__ripple"></span>
-        <span class="mdc-button__label">Rerender</span>
-     </button>
+        <span class="mdc-button__label">Add Songs to the Table</span>
+    </button>
+
+
+    <div class="mdc-data-table">
+        <div class="mdc-data-table__table-container">
+
+          <table class="mdc-data-table__table">
+
+            <thead>
+              <tr class="mdc-data-table__header-row">
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Name</th>
+                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Favorite Song</th>
+              </tr>
+            </thead>
+
+            <tbody class="mdc-data-table__content" id='songTable'>
+
+              <tr class="mdc-data-table__row">
+                <td class="mdc-data-table__cell">Claire</td>
+                <td class="mdc-data-table__cell">Mystery of Love</td>
+              </tr>
+
+            </tbody>
+
+          </table>
+        </div>
+      </div>
 
 <script src="./main.js"></script>
 </body>
